fix jump, fix candy creator

--- a/game/css/main.css
+++ b/game/css/main.css
@@ -18,7 +18,7 @@ body {
 .platform {
   background-image: url('platform01.png');
   height: 100px;
-  width: 5000px;
+  width: 100000px;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -40,7 +40,7 @@ body {
   position: absolute;
   bottom: 100px;
   left: 30px;
-  /* transition: 0.3s linear; */
+  transition: 0.3s linear bottom; 
 }
 .score {
   position: absolute;
